--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.3"
+    "@astrojs/tailwind": "^5.1.4",
+    "@supabase/supabase-js": "^2.47.14",
+    "astro": "^5.1.3",
+    "tailwindcss": "^3.4.17"
   }
 }
