--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.1.0",
     "@astrojs/tailwind": "^5.1.4",
     "@supabase/supabase-js": "^2.47.14",
     "astro": "^5.1.3",
-    "tailwindcss": "^3.4.17"
+    "localbase": "^0.0.1",
+    "react-toastify": "^11.0.3",
+    "sweetalert": "^2.1.2",
+    "tailwindcss": "^3.4.17",
+    "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.7",
+    "typescript": "^5.7.3"
   }
 }
